@@ -3,6 +3,7 @@ linux-tools (4.5~rc5-1~exp4) UNRELEASED; urgency=medium
   * Makefile.inc: Add support for wildcards in $(SCRIPTS) and $(DATA)
   * linux-kbuild: Include scripts/Makefile.* (Closes: #815593)
   * Makefile.inc, rules.real: Fix conflation of $(DESTDIR) and $(prefix)
+  * hyperv-daemons: Fix rule redefinition that 'make' warns about
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 22 Feb 2016 23:21:57 +0000
 
